Fixed hyphens everywhere, was unable to add hyphens only for long layout breaking words, so disabled them at all

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -44,8 +44,4 @@ $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
   word-wrap: break-word;
   -ms-word-break: break-all;
   word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
 }
